# didgeridoo

./: CMakeLists.txt  README.md
didgeridoo/: main.cc  main.h
didgeridoo/helper/: helper_system.cc  helper_system.h
didgeridoo/model/: Didgeridoo.cc  Didgeridoo.h  Generator.cc  Generator.h
didgeridoo/model/instrument/: Bowowow.cc  Bowowow.h  Didgeridoo.cc  Xxx.cc  Xxx.h
didgeridoo/struct/: pitch.h
quietschbox/: main.cc  main.h
quietschbox/helper/: helper_gtk.cc  helper_gtk.h  helper_system.h
quietschbox/model/: ToneSequencer.cc  ToneSequencer.h  WaveGenerator.cc  WaveGenerator.h
quietschbox/struct/: pitch.h
